--- a/frontend/src/styles/InstrumentsAdmin.css
+++ b/frontend/src/styles/InstrumentsAdmin.css
@@ -31,6 +31,8 @@ body {
   border-radius: 8px;
   overflow: hidden;
   background-color: #d6393a;
+  padding-left: 10px;
+  padding-right: 10px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.4);
   width: 100%;
   max-width: 100%;
